# workroot

./: .gitignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  (+1 more)
docs/: PIVOT.md  apple-notarization.md
extension/: background.js  content.js  devtools.js  manifest.json  panel.html  panel.js
scripts/: workroot-shell-hook.fish  workroot-shell-hook.sh
src/: App.test.tsx  App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs  bookmarks.rs  clipboard.rs  errors.rs  fileview.rs  http_client.rs  lib.rs  main.rs  projects.rs  scheduler.rs  search.rs  settings.rs  snippets.rs  todos.rs  tray.rs  validate.rs  webhooks.rs  workspace.rs
src-tauri/src/agents/: pipeline.rs
src-tauri/src/ai/: assist.rs  chat.rs  mod.rs
src-tauri/src/browser/: correlate.rs  mod.rs
src-tauri/src/claudemd/: mod.rs  template.rs  watcher.rs
src-tauri/src/collaboration/: mod.rs  notifications.rs  timeline.rs
src-tauri/src/db/: mod.rs  queries.rs  schema.sql
src-tauri/src/dbconnect/: detect.rs  mod.rs  schema.rs
src-tauri/src/docker/: compose.rs  detect.rs  images.rs  mod.rs  monitor.rs
src-tauri/src/filewatcher/: analysis.rs  mod.rs  stats.rs  tracker.rs
src-tauri/src/git/: analytics.rs  blame.rs  branch.rs  checkpoint.rs  commit.rs  compare.rs  conflicts.rs  diff.rs  hooks.rs  log.rs  mod.rs  stash.rs  tags.rs  worktree.rs
src-tauri/src/github/: activity.rs  auth.rs  ci.rs  mod.rs  pr.rs  repos.rs
src-tauri/src/helm/: mod.rs
src-tauri/src/mcp/: auth.rs  discovery.rs  mod.rs  server.rs
src-tauri/src/mcp/tools/: db.rs  env.rs  files.rs  logs.rs  memory.rs  mod.rs  network.rs  projects.rs  proxy.rs  shell.rs
src-tauri/src/memory/: dead_ends.rs  embeddings.rs  mod.rs
src-tauri/src/metrics/: dora.rs  mod.rs
src-tauri/src/network/: logging.rs  mod.rs  ports.rs  proxy.rs
src-tauri/src/perf/: mod.rs  monitor.rs  vitals.rs
src-tauri/src/plugins/: mod.rs  registry.rs  runtime.rs
src-tauri/src/process/: detect.rs  lifecycle.rs  logs.rs  mod.rs  port.rs  spawn.rs
src-tauri/src/proxy/: mod.rs  server.rs  switch.rs
src-tauri/src/security/: audit.rs  headers.rs  licenses.rs  mod.rs  secrets.rs
src-tauri/src/shell/: hook.rs  mod.rs
src-tauri/src/ssh/: connections.rs
src-tauri/src/tasks/: deps.rs  discover.rs  history.rs  mod.rs  watch.rs
src-tauri/src/terminal/: drop_image.rs  mod.rs  recording.rs
src-tauri/src/testing/: benchmarks.rs  coverage.rs  detect.rs  flaky.rs  mod.rs  runner.rs
src-tauri/src/vault/: crypto.rs  diff.rs  import.rs  mod.rs  share.rs  synthesis.rs
(+244 files in other folders)
