[package]
name = "workroot"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
reqwest = { version = "0.12", features = ["json"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
tauri-plugin-dialog = "2"
git2 = "0.20"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
