[package]
name = "workroot"
version = "0.1.26"
edition = "2021"
authors = ["Saurav Panda <saurav@workroot.dev>"]
description = "A local-first developer workspace for managing projects, terminals, and Git workflows."

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "process", "time", "sync", "net", "fs", "macros"] }
thiserror = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
tauri-plugin-dialog = "2"
git2 = { version = "0.20", default-features = false }
aes-gcm = "0.10"
tempfile = "3"
chrono = "0.4"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1"] }
http-body-util = "0.1"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
notify = "7"
notify-debouncer-mini = "0.5"
base64 = "0.22"
rand = "0.8"
regex = "1"
tauri-plugin-pty = "0.2.1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Pin libz-sys to avoid Windows build failure in 1.1.25+ (missing zlib source files)
libz-sys = "=1.1.24"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }
